# chessBot

./: .gitignore  CMakeLists.txt  README.md  bot.cpp  position.cpp  position.h  tables.cpp  tables.h  test.cpp  types.cpp
core/: bot.cpp  eval.h  position.cpp  types.cpp  types.h
